css/style.css
:root {
  --clr-purple: hsl(259, 100%, 65%);
  --clr-red-light: hsl(0, 100%, 67%);

  --clr-neutral-white: hsl(0, 0%, 100%);
  --clr-neutral-offwhite: hsl(0, 0%, 97%);
  --clr-neutral-light-grey: hsl(0, 0%, 86%);
  --clr-neutral-smokey-grey: hsl(0, 1%, 44%);
  --clr-neutral-offblack: hsl(0, 0%, 8%);

  --ff-main: 'Poppins', sans-serif;
}

*,
::before,
::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  font-family: var(--ff-main);
  line-height: 1.5;
}

body {
  background-color: var(--clr-neutral-offwhite);
}

main {
  display: grid;
  place-items: center;
  min-height: 100vh;
}

button {
  cursor: pointer;
  border: none;
  padding: 1rem;
}

.round {
  border-radius: 50%;
  aspect-ratio: 1 / 1;
}

.button--fill {
  color: var(--clr-neutral-white);
  background-color: var(--clr-purple);
  transition: background-color 100ms ease-in;
}

.button--fill:hover {
  background-color: var(--clr-neutral-offblack);
}

.ascent {
  color: var(--clr-purple);
}

.container {
  width: min(100% - 1rem, 700px);
  margin-inline: auto;
}

.age-calculator {
  background-color: var(--clr-neutral-white);
  padding: 3rem 1.5rem;
  border-radius: 2rem 2rem 7rem 2rem;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.04);
}

form .flex {
  display: flex;
  align-items: flex-start;
  gap: 1.5rem;
}

.form-group {
  display: grid;
  gap: 0.35rem;
}

.form-group.invalid {
  color: var(--clr-red-light);
}

.form-group.invalid input {
  border: 1px solid var(--clr-red-light);
}

.form-group.invalid label {
  color: var(--clr-red-light);
}

.error {
  display: none;
}

.form-group.invalid .error {
  font-style: italic;
  font-size: 0.75rem;
  display: block;
}

.form-group > input {
  min-width: 0;
  max-width: 150px;
}

input[type='text'] {
  font-size: 2rem;
  font-weight: 700;
  padding: 1.25rem 0.75rem;
  border: 1px solid var(--clr-neutral-light-grey);
  border-radius: 0.75rem;
}

input:focus {
  outline: 1px solid var(--clr-purple);
}

label {
  text-transform: uppercase;
  font-weight: 700;
  color: var(--clr-neutral-smokey-grey);
}

.divider-line {
  position: relative;
  display: flex;
  justify-content: center;
  margin: 2.5rem 0;
}

.divider-line > * {
  position: relative;
  z-index: 5;
}

.divider-line:before {
  content: '';
  position: absolute;
  top: 50%;
  width: 100%;
  height: 1px;
  background-color: var(--clr-neutral-light-grey);
  z-index: 1;
}

.age > div {
  color: var(--clr-neutral-offblack);
  font-size: 4rem;
  font-weight: 800;
  font-style: italic;
  line-height: 1;
}

@media (width > 550px) {
  .divider-line {
    justify-content: flex-end;
  }
}

